# lumenitos-swap

./: .gitignore  Cargo.toml  README.md
contracts/dex-factory/: Cargo.toml
contracts/dex-factory/src/: lib.rs
contracts/dex-pool/: Cargo.toml
contracts/dex-pool/certora/: README.md  certora_build.py  dex_pool.conf  justfile  liquidity_specs.conf  math_specs.conf  pool_state_specs.conf  swap_specs.conf  tick_specs.conf
contracts/dex-pool/src/: invariants.rs  lib.rs  liquidity.rs  storage.rs  swap.rs  tick.rs
contracts/dex-pool/src/certora_specs/: liquidity_specs.rs  math_specs.rs  mod.rs  model.rs  pool_state_specs.rs  swap_specs.rs  tick_specs.rs  token.rs
contracts/dex-pool/test_snapshots/tests/: test_get_position_empty.1.json  test_initialize_different_fee_tiers.1.json  test_initialize_pool.1.json  test_initialize_twice_fails.1.json  test_initialize_with_different_prices.1.json  test_initialize_wrong_token_order.1.json  test_max_liquidity_varies_by_tick_spacing.1.json  test_view_functions.1.json
contracts/dex-pool/test_snapshots/tick/tests/: test_cross_flips_fee_growth.1.json  test_cross_returns_liquidity_net.1.json  test_flip_tick_multiple_ticks.1.json  test_flip_tick_negative.1.json  test_flip_tick_sets_bit.1.json  test_get_fee_growth_inside_current_above_range.1.json  test_get_fee_growth_inside_current_below_range.1.json  test_get_fee_growth_inside_current_in_range.1.json  test_next_initialized_tick_at_boundary.1.json  test_next_initialized_tick_gt_finds_tick.1.json  test_next_initialized_tick_negative_ticks.1.json  test_position_lifecycle.1.json  test_update_add_liquidity_lower_tick.1.json  test_update_add_liquidity_upper_tick.1.json  test_update_initializes_fee_growth_below_current.1.json  test_update_initializes_tick.1.json  test_update_remove_all_liquidity_flips.1.json  test_update_remove_liquidity.1.json
contracts/dex-position-manager/: Cargo.toml
contracts/dex-position-manager/src/: lib.rs
contracts/dex-quoter/: Cargo.toml
contracts/dex-quoter/src/: lib.rs
contracts/dex-router/: Cargo.toml
contracts/dex-router/src/: lib.rs
libs/dex-math/: Cargo.toml
libs/dex-math/src/: full_math.rs  lib.rs  liquidity_math.rs  sqrt_price_math.rs  swap_math.rs  tick_math.rs
libs/dex-types/: Cargo.toml
libs/dex-types/src/: lib.rs  pool.rs  position.rs  tick.rs
(+10 files in other folders)
