[workspace]
members = [
    "contracts/dex-factory",
    "contracts/dex-pool",
    "contracts/dex-router",
    "contracts/dex-quoter",
    "contracts/dex-position-manager",
    "libs/dex-math",
    "libs/dex-types",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "23.0.0"
soroban-fixed-point-math = "1.3.0"
dex-math = { path = "libs/dex-math" }
dex-types = { path = "libs/dex-types" }

# OpenZeppelin (for future NFT integration)
# stellar-tokens = "=0.5.1"
# stellar-macros = "=0.5.1"
# stellar-access = "=0.5.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
